build: upgrade to java18